Fixing an issue with spacing on the privacy_toolkit_auxiliary header text

--- a/_sass/components/_auxiliary-header.scss
+++ b/_sass/components/_auxiliary-header.scss
@@ -4,6 +4,14 @@
 
 .privacy-page-auxiliary-layout__header {
 
+  &.with-header {
+    background-repeat: no-repeat !important;
+    padding: 0;
+    margin: 0;
+    background-size: cover !important;
+    background-position: center !important;
+  }
+
   margin-left: 0;
   width: 100%;
   overflow-x: hidden;
@@ -37,7 +45,7 @@
     display: block;
 
     @media screen and (max-width: $bp-med-2) {
-      display: none;
+      display: none !important;
     }
   }
 
@@ -209,6 +217,8 @@
           clear: both;
           width: 100%;
           color: $color-gray-16;
+          display: flex;
+          justify-content: space-between;
 
           .c-auxiliary__basic-page-title {
             text-align: center;
@@ -274,9 +284,11 @@
               width: 100%;
               margin-top: 20px;
               clear: left;
+              padding-bottom: 30px;
               
               @media screen and (max-width: $bp-med-2) {
                 margin-top: 0px;
+                display: flex;
               }
 
               button {
@@ -304,8 +316,10 @@
           }
 
           .c-auxiliary__headline-right {
+            display: flex;
+            align-items: flex-end;
+
             img {
-              float: right;
             }
           }
       }
