--- a/_sass/components/_toolkit-header.scss
+++ b/_sass/components/_toolkit-header.scss
@@ -17,6 +17,14 @@
   overflow-x: hidden;
   font-family: Lato;
 
+  &.with-header {
+    background-repeat: no-repeat;
+    padding: 0;
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+  }
+
   .scale-on-hover {
     transform: scale(1);
     transition: all .2s ease-in-out;
